fixed various minor layout problems

--- a/htdocs/css/gbrowse.css
+++ b/htdocs/css/gbrowse.css
@@ -69,7 +69,7 @@ TH.linkmenu       {
 	            font-size: small;
 		    margin-left: 1em;
 }
-.searchbody       { background-color: #F2F6FA;
+.searchbody       { background-color: #E6EBF0;
 	            font-size: small;
 		    margin-left: 1em;
 }
@@ -93,8 +93,7 @@ TH.linkmenu       {
 .toggle           { color: #3366FF; }
 .error            { color: red; }
 .errorpanel       { background-color: lightyellow;    
-		    margin:  -8px -8px  0px -8px;
-		    padding:  8px  8px  0px  8px;
+		    margin:   -8px 0px  0px  -8px;
 		  }
 .note             { color: red; }
 .pre              { font-family: monospace; }
